--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,5 @@ script:
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      phpcs
+      phpcs --standard=phpcs.ruleset.xml --extensions=php
     fi
